test/runnable/discard.nt
module discard;

macro import std.macro.assert;

(void | fail int) test() {
    return 5;
}

(void | fail int) test2() {
    test?;
    return;
}

void main() {
    auto ret = test2;
    assert(ret.case(void: false, int i: i == 5));
}
