test/fail_compilation/lambda_escape_return_either.nt
module lambda_escape_return_either;

auto test() {
    auto lambda = () => 2;
    (:a | :b) x = :a;
    return x.case(:a: lambda, :b: 5);
}

void main() {
}
